force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Organization Relationship</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>