force-app/main/default/objects/Account_Relationship__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field stores parent Account details for HCO-HCO relationship</description>
    <inlineHelpText>This field stores parent Account details for HCO-HCO relationship</inlineHelpText>
    <label>From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>