force-app/main/default/objects/Account_Relationship__c/fields/From_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Organization_Status__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To Store the status of From Organization status</description>
    <formula>TEXT(From_Account__r.Status__c)</formula>
    <label>From Organization Status</label>
    <type>Text</type>
</CustomField>