force-app/main/default/objects/Account_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores start Date for HCO-HCO relationship</description>
    <inlineHelpText>This field stores start Date for HCO-HCO relationship</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>