force-app/main/default/objects/Account_Relationship__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field stores status reason if there is any change in HCO-HCO relationship</description>
    <inlineHelpText>This field stores status reason if there is any change in HCO-HCO relationship</inlineHelpText>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested by Customer</fullName>
            </value>
            <value>
                <fullName>Align Decision</fullName>
            </value>
            <value>
                <fullName>Business Establishment And Acquisition</fullName>
                <isActive>false</isActive>
                <label>Business Establishment And Acquisition</label>
            </value>
            <value>
                <fullName>Business Sale</fullName>
                <isActive>false</isActive>
                <label>Business Sale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>