force-app/main/default/objects/Account_Relationship__c/fields/To_Account__c.field-meta.xml
<CustomField>
    <fullName>To_Account__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field stores child Account for HCO-HCO relationship</description>
    <inlineHelpText>This field stores child Account for HCO-HCO relationship</inlineHelpText>
    <label>To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Relationships1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>