force-app/main/default/objects/Account_Relationship__c/fields/To_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Organization_Status__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To store the status of  To Organization Status</description>
    <formula>TEXT(To_Account__r.Status__c)</formula>
    <label>To Organization Status</label>
    <type>Text</type>
</CustomField>