force-app/main/default/objects/Account_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Account__c</columns>
    <columns>To_Account__c</columns>
    <columns>Relationship_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>